# MMM_Savings_Rate

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG  MANIFEST.in  README.md  gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  savings_rate.py  setup.py  sr_launcher.py
.github/workflows/: test.yml
config/: account-config-example.ini  account_config_example.ini  config-example.ini  config-joe.ini  config_example.ini  db-example.json
csv/: income-example.csv  income-example.xlsx  income-joe.csv  savings-example.csv  savings-example.xlsx  savings-joe.csv
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/_build/doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  objects.inv  searchindex.js
docs/_build/html/_sources/: index.rst.txt  index.txt
src/mmm_savings_rate/: __init__.py  __main__.py  app.py  db_config.py  gui.py  savings_rate.py  sr_launcher.py
tests/: mmm_savings_rate.py  test_config.py  test_file_watching.py  test_gui.py  test_gui_cli_plot_consistency.py  test_savings_rate.py  test_tinydb_config.py
tests/test_config/: account-config-blank-csv.ini  account-config-empty-csv.ini  account-config-test-bad.ini  account-config-test-no-enemies.ini  account-config.ini  config-bad-values.ini  config-julia-test.ini  config-missing-fred.ini  config-missing-values.ini  config-no-fred-no-notes.ini  config-test-blank-csv.ini  config-test-empty-csv.ini  config-test-xlsx.ini  config-test.ini
tests/test_csv/: income-empty.csv  savings-empty.csv
