[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MMM_Savings_Rate"
version = "1.1.0"
description = "An application that can parse spreadsheets in order to calculate and plot a user's monthly savings rate over time."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GPLv3"}
authors = [
    {name = "Brad Busenius", email = "bbusenius@gmail.com"}
]
keywords = ["finance", "savings", "FI", "FIRE", "spreadsheet"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "bokeh",
    "diablo_python @ git+https://github.com/bbusenius/Diablo-Python.git#egg=diablo_python",
    "fi @ git+https://github.com/bbusenius/FI.git#egg=FI",
    "openpyxl",
    "pandas",
    "python-dateutil",
    "requests",
    "tinydb",
]

[project.urls]
Homepage = "https://github.com/bbusenius/MMM_Savings_Rate.git"
Repository = "https://github.com/bbusenius/MMM_Savings_Rate.git"
Issues = "https://github.com/bbusenius/MMM_Savings_Rate/issues"

[project.scripts]
savingsrates = "sr_launcher:run"
sr-show-config = "sr_launcher:show_config"
sr-validate-config = "sr_launcher:validate_config"
sr-update-setting = "sr_launcher:update_setting"

[tool.setuptools]
py-modules = ["savings_rate", "db_config", "sr_launcher"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", ".venv*"]

# Black formatting configuration
[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = [".", "tests"]
skip_glob = ["docs/*"]

# flake8 configuration (still uses setup.cfg format)
[tool.flake8]
ignore = ["D100", "D101", "D202", "D204", "D205", "D400", "D401", "E303", "E501", "W503", "N805", "N806"]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info"
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "venv/*",
    ".venv/*", 
    "tests/*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]