[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MMM_Savings_Rate"
version = "2.0.0"
description = "An application that can parse spreadsheets in order to calculate and plot a user's monthly savings rate over time."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GPLv3"}
authors = [
    {name = "Brad Busenius", email = "bbusenius@gmail.com"}
]
keywords = ["finance", "savings", "FI", "FIRE", "spreadsheet"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "bokeh",
    "diablo_python @ git+https://github.com/bbusenius/Diablo-Python.git#egg=diablo_python",
    "fi @ git+https://github.com/bbusenius/FI.git#egg=FI",
    "openpyxl",
    "pandas",
    "python-dateutil",
    "requests",
    "tinydb",
]

[project.urls]
Homepage = "https://github.com/bbusenius/MMM_Savings_Rate.git"
Repository = "https://github.com/bbusenius/MMM_Savings_Rate.git"
Issues = "https://github.com/bbusenius/MMM_Savings_Rate/issues"

[project.scripts]
savingsrates = "mmm_savings_rate.sr_launcher:run"
sr-show-config = "mmm_savings_rate.sr_launcher:show_config"
sr-validate-config = "mmm_savings_rate.sr_launcher:validate_config"
sr-update-setting = "mmm_savings_rate.sr_launcher:update_setting"
savingsrates-gui = "mmm_savings_rate.gui:run_gui"

[project.optional-dependencies]
gui = [
    "toga",
    "watchdog",
]

[tool.setuptools]
packages = ["mmm_savings_rate"]
package-dir = {"" = "src"}
include-package-data = true

# Black formatting configuration
[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = [".", "tests"]
skip_glob = ["docs/*"]

# flake8 configuration (still uses setup.cfg format)
[tool.flake8]
ignore = ["D100", "D101", "D202", "D204", "D205", "D400", "D401", "E303", "E501", "W503", "N805", "N806"]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info"
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "venv/*",
    ".venv/*", 
    "tests/*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Briefcase packaging configuration
[tool.briefcase]
project_name = "MMM Savings Rate"
bundle = "com.savingsratewars"
version = "2.0.0"
description = "Personal finance application that calculates and visualizes monthly savings rates"
author = "Brad Busenius"
author_email = "bbusenius@gmail.com"
license = {file = "LICENSE.txt"}
url = "https://github.com/bbusenius/MMM_Savings_Rate"

[tool.briefcase.app.mmm-savings-rate]
formal_name = "MMM Savings Rate"
description = "Personal finance application that calculates and visualizes monthly savings rates over time using spreadsheet data"
icon = "src/mmm_savings_rate/resources/icon"
long_description = """MMM Savings Rate is a personal finance application that helps users track their Financial Independence (FI) progress through interactive Bokeh visualizations. 

Features:
- Interactive GUI with configuration editing
- Bokeh plot visualization of savings rates over time  
- Read-only viewing of income and savings spreadsheet data
- CLI commands for advanced usage
- TinyDB configuration management
- FRED API integration for US economic data
"""

# Entry point for GUI application  
sources = ["src/mmm_savings_rate"]

# Test configuration
test_sources = ["tests"]

# Include CSV example files and other resources
resources = [
    "csv",
    "config"
]

# Python version requirement
requires = [
    "bokeh",
    "diablo_python @ git+https://github.com/bbusenius/Diablo-Python.git#egg=diablo_python",
    "fi @ git+https://github.com/bbusenius/FI.git#egg=FI", 
    "openpyxl",
    "pandas",
    "python-dateutil",
    "requests",
    "tinydb",
    "toga",
    "watchdog",
    "."
]

test_requires = [
    "pytest",
    "pytest-asyncio"
]

[tool.briefcase.app.mmm-savings-rate.linux]
requires = [
    "toga-gtk~=0.4.7",
]

[tool.briefcase.app.mmm-savings-rate.linux.system.debian]
revision = 1
system_requires = [
    "python3-dev",
    "python3-pip",
    "python3-venv",
    "build-essential",
    "libgirepository1.0-dev",
    "libcairo2-dev",
    "libpango1.0-dev",
    "libgdk-pixbuf2.0-dev",
    "libatk1.0-dev"
]

# Desktop integration
desktop_file_name = "mmm-savings-rate"

# pytest configuration
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::RuntimeWarning:.*coroutine.*never awaited.*",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "ignore:coroutine 'PlotTab.refresh_plot' was never awaited:RuntimeWarning",
]
